tests/baselines/reference/indexSignatureTypeCheck2.errors.txt
==== tests/cases/compiler/indexSignatureTypeCheck2.ts (8 errors) ====
    class IPropertySet {
        [index: string]: any
    }
    
    var ps: IPropertySet = null;
    var index: any = "hello";
    ps[index] = 12;
    
    interface indexErrors {
        [p2?: string];
        [...p3: any[]];
        [p4: string, p5?: string];
                   ~
!!! indexSignatureTypeCheck2.ts(12,16): error TS1005: ']' expected.
                                ~
!!! indexSignatureTypeCheck2.ts(12,29): error TS1005: ';' expected.
                                 ~
!!! indexSignatureTypeCheck2.ts(12,30): error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~
!!! indexSignatureTypeCheck2.ts(12,5): error TS2232: Duplicate string index signature. Additional locations:
!!! 	indexSignatureTypeCheck2.ts(10,5)
        [p6: string, ...p7: any[]];
                   ~
!!! indexSignatureTypeCheck2.ts(13,16): error TS1005: ']' expected.
                     ~~~
!!! indexSignatureTypeCheck2.ts(13,18): error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
                                 ~
!!! indexSignatureTypeCheck2.ts(13,30): error TS1005: ';' expected.
                                  ~
!!! indexSignatureTypeCheck2.ts(13,31): error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }